# Urban_flood_inundation_mapping_with_Sentinel-1_SAR

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: .env.example  event_seoul_hangang_2020.yaml
data/: aoi_builder.py  download_sentinel1.py  events.py  flood_detection.py  generate_sample_data.py  paths.py
data/aoi/: seoul_hangang_2km_aoi_dummy.geojson
data/products/inundation/seoul_hangang_2km/: change_map.tif  flood_mask.tif
data/raw/: hangang_line_dummy.geojson  seoul_boundary_dummy.geojson
data/sentinel1/raw/dry/: S1_dry_sample_VV.tif
data/sentinel1/raw/flood/: S1_flood_sample_VV.tif
data/vector/: seoul_boundary.geojson  seoul_hangang_2km_aoi.geojson
documents/: Academic_Memo.md  Command.md  MEMO.md  README_en.md  README_ko.md
service/: app.py  requirements.txt
